# LongVLM

./: .gitignore  README.md  requirements.txt
LongVLM/: INSTALLATION.md  filter.ipynb  pyproject.toml  requirements.txt
LongVLM/eval/longvqa/: due_evaluator.py  eval_longvqa.py
LongVLM/eval/longvqa/due_scorer/: accuracy_scorer.py  base_scorer.py  fscorer.py  wtq_scorer.py
LongVLM/eval/milebench/: combine_images.py  utils.py
LongVLM/eval/mm_niah/: calculate_scores.py  eval_mm_niah_long.py  mm_niah.json
LongVLM/eval/mmmu/: evaluate_mmmu.py
LongVLM/eval/mvbench/: evaluate_mvbench.py
LongVLM/eval/pope/: evaluate_pope.py
LongVLM/eval/seed/: evaluate_seed.py
LongVLM/internvl/model/internlm2/: configuration_internlm2.py  modeling_internlm2.py
LongVLM/internvl/model/internvl_chat/: modeling_intern_vit.py
LongVLM/internvl/patch/: pad_data_collator.py
LongVLM/internvl/serve/: model_worker.py
LongVLM/internvl/train/: constants.py  internvl_chat_finetune.py
LongVLM/scripts/: evaluate.sh  evaluate_milebench.sh  evaluate_mmniah.sh  infer.sh
LongVLM/shell/data/: annotation_train_32k_small.json  annotation_train_32k_with_v33.json
LongVLM/shell/internlm2/: baseline.sh  internvl_chat_v2_internlm2_2b_dynamic_res_v2pe_256k.sh
ShortVLM/: README.md
VLMEvalKit/: README.md  demo.py  run.py
VLMEvalKit/vlmeval/: config.py  (+2 more)
dataset/: gpt_prompt.py  train_visual_webinstruct.jsonl  train_visual_webinstruct_long.jsonl
internvl/: conversation.py
scripts/: evaluate.sh  evaluate_auto.sh  evaluate_longvqa.sh  evaluate_mmniah_long.sh  evaluate_simple.sh
(+48 files in other folders)
