[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "V2PE"
version = "1.5.2"
description = "Improving Multimodal Long-Context Capability of Vision-Language Models with Variable Visual Position Encoding."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.0.1", "torchvision==0.15.2",
    "transformers==4.37.2", "tokenizers==0.15.1", "sentencepiece==0.2.0", "shortuuid",
    "accelerate", "peft>=0.4.0", "bitsandbytes==0.41.0",
    "pydantic<2,>=1", "markdown2[all]", "numpy", "scikit-learn>=1.2.2",
    "gradio==3.35.2", "gradio_client==0.2.9",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "deepspeed>=0.9.5", "einops==0.8.0", "einops-exts==0.0.4", "timm>=0.6.11", "decord",
    "pycocoevalcap", "editdistance", "nltk", "seaborn"
]

[project.urls]
"Homepage" = "https://github.com/OpenGVLab/InternVL" ## TODO: need to change
"Bug Tracker" = "https://github.com/OpenGVLab/InternVL/issues" ## TODO: need to change

[tool.setuptools.packages.find]
exclude = ["data*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "shell*", "pretrained*"]

[tool.wheel]
exclude = ["data*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "shell*", "pretrained*"]
